[tool.poetry]
name = "sentilyze-unified"
version = "4.0.0"
description = "Unified Sentiment Analysis Platform - Crypto & Gold Markets"
authors = ["Sentilyze Team <team@sentilyze.live>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.14.3"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
httpx = "^0.26.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
redis = "^5.0.0"
google-cloud-bigquery = "^3.15.0"
google-cloud-pubsub = "^2.21.0"
google-cloud-firestore = "^2.14.0"
google-cloud-secret-manager = "^2.18.0"
structlog = "^24.1.0"
tenacity = "^8.2.0"
python-multipart = "^0.0.6"
numpy = "^1.26.0"
praw = "^7.7.0"
feedparser = "^6.0.0"
websockets = "^12.0"
aiohttp = "^3.9.0"
apscheduler = "^3.10.0"
google-cloud-aiplatform = "^1.40.0"
python-json-logger = "^2.0.0"
prometheus-client = "^0.19.0"
psycopg2-binary = "^2.9.0"
asyncpg = "^0.29.0"


[tool.poetry.group.dev.dependencies]


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # Line too long, handled by black
    "B008",  # Do not perform function calls in argument defaults
    "C901",  # Too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=sentilyze_core --cov-report=term-missing --cov-report=html"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
    "security: Security tests",
]
