[tool.poetry]
name = "sentilyze-admin-panel"
version = "1.0.0"
description = "Admin panel for Sentilyze platform - Full-stack monitoring and management"
authors = ["Sentilyze Team <team@sentilyze.live>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

# Database
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
asyncpg = "^0.29.0"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.9"

# Authentication & Security
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"

# HTTP & WebSocket
httpx = "^0.26.0"
websockets = "^12.0"
aiohttp = "^3.9.0"

# GCP Integration
google-cloud-bigquery = "^3.14.0"
google-cloud-logging = "^3.9.0"
google-cloud-pubsub = "^2.19.0"
google-cloud-firestore = "^2.14.0"

# Monitoring & Metrics
prometheus-client = "^0.19.0"
structlog = "^24.1.0"
python-json-logger = "^2.0.0"

# Utilities
tenacity = "^8.2.0"
python-dateutil = "^2.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
httpx = "^0.26.0"
black = "^24.0.0"
isort = "^5.13.0"
ruff = "^0.1.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
