[tool.poetry]
name = "unified-ingestion-service"
version = "4.0.0"
description = "Unified data ingestion service for Sentilyze - supporting both crypto and gold markets"
authors = ["Sentilyze Team <team@sentilyze.live>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
sentilyze-core = {path = "../../shared", develop = true}
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

# Crypto collectors
praw = "^7.7.0"
feedparser = "^6.0.0"
websockets = "^12.0"
aiohttp = "^3.9.0"

# Gold collectors
httpx = "^0.26.0"
beautifulsoup4 = "^4.12.0"
cloudscraper = "^1.2.71"
lxml = "^5.1.0"
yfinance = "^0.2.40"

# Scheduling
apscheduler = "^3.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^24.0.0"
isort = "^5.13.0"
ruff = "^0.1.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"
